WebKit/Plugins/WebBaseNetscapePluginView.mm
@@ -1496,6 +1496,11 @@ static OSStatus TSMEventHandler(EventHandlerCallRef inHandlerRef, EventRef inEve
     free(cValues);
 }
 
+- (void)streamIsDead:(WebBaseNetscapePluginStream*)stream;
+{
+    [streams removeObjectIdenticalTo:stream];
+}
+
 - (void)dealloc
 {
     ASSERT(!isStarted);
